[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Src/Actors/Player_01.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 14 )

[node name="Player_01" type="KinematicBody2D" groups=[
"Player_01",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ReloadSpeed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 2 )

[node name="GotHitTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="ReloadSpeed" to="." method="_on_ReloadSpeed_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="GotHitTimer" to="." method="_on_GotHitTimer_timeout"]
